--- a/exercicios/ex022/fundo004.html
+++ b/exercicios/ex022/fundo004.html
@@ -7,16 +7,23 @@
     <title>Document</title>
     <style>
         body{
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper-nature.jpg');
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+
+            /*shorthand - background
+            color > image > position > repeat > [size] > attachment */
+
+            background: black url('imagens/wallpaper-nature.jpg') center center  no-repeat  fixed;
             background-size: cover;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid rgb(8, 8, 8);
@@ -27,7 +34,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga ab autem totam blanditiis quo debitis neque vitae culpa nulla nam? Perspiciatis atque et quo excepturi harum quod quas fugit aliquam? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto dolores delectus quibusdam est doloribus quam. Ipsa voluptas sapiente qui minima, fugit ad molestiae cumque non error repellat minus dolor saepe. Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae fugiat atque incidunt, quod odit deleniti. Distinctio quibusdam perferendis soluta possimus aliquam. Eum deleniti dicta repellat minus libero repellendus et exercitationem?
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga ab autem totam blanditiis quo debitis neque vitae culpa nulla nam? Perspiciatis atque et quo excepturi harum quod quas fugit aliquam? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto dolores delectus quibusdam est doloribus quam. Ipsa voluptas sapiente qui minima, fugit ad molestiae cumque non error repellat minus dolor saepe. Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae fugiat atque incidunt, quod odit deleniti. Distinctio quibusdam perferendis soluta possimus aliquam. Eum deleniti dicta repellat minus libero repellendus et exercitationem? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione deserunt et atque quis esse ipsa culpa in rerum voluptate, ea accusantium consequuntur temporibus, libero voluptates! Facilis omnis necessitatibus neque fuga? Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis omnis ipsam quisquam possimus obcaecati laboriosam consequatur maiores, vitae quia eveniet incidunt magni. Ducimus sapiente eaque ratione possimus itaque natus aut! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam iusto, porro esse quaerat quasi perferendis voluptatem necessitatibus, nulla iste modi pariatur accusantium accusamus minus cum, sequi alias fugiat laborum? Cumque. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis beatae fugiat dolorem officiis facilis labore perspiciatis dolores quibusdam ad quam autem placeat iste voluptatum qui voluptatem excepturi, perferendis maxime nihil! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit veniam soluta dolor beatae ducimus ad autem ipsam minus libero deleniti tempore expedita distinctio quidem quasi placeat sunt, ea, veritatis animi!
         </p>
     </main>
 </body>
